--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="gallery-grids">
 						<div class="col-md-4 gallery-top">
 							<figure class="effect-bubba">
-								<a href="images/g1.jpg" class="swipebox">
-									<img src="images/g1.jpg" alt="" class="img-responsive" />
+								<a href="images/g1.JPG" class="swipebox">
+									<img src="images/g1.JPG" alt="" class="img-responsive" />
 									<figcaption>
 										<h4>BAJA SAE 2016</h4>
 									</figcaption>
